[package]
name = "rmk-svalboard"
version = "0.0.1"
authors = ["David H. Bronke <whitelynx@gmail.com>", "Haobo Gu <haobogu@outlook.com>"]
description = "Svalboard firmware written in Rust"
homepage = "https://github.com/whitelynx/rmk-svalboard"
repository = "https://github.com/whitelynx/rmk-svalboard"
readme = "README.md"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
rmk = { version = "0.5.2", default-features = false, features = ["defmt", "split"] }
#rmk = { git = "https://github.com/grabpot/rmk.git", branch = "fix/splitserial", default-features = false, features = ["defmt", "split"] }
#rmk = { git = "https://github.com/whitelynx/rmk.git", branch = "feat/custom-matrix", default-features = false, features = ["defmt", "split"] }
#rmk = { path = "../../Other/rmk/rmk", default-features = false, features = ["defmt", "split"] }
embassy-time = { version = "0.4", features = ["defmt"] }
embassy-rp = { version = "0.3", features = [
    "defmt",
    "time-driver",
    "critical-section-impl",
	"rp2040",
] }
embassy-executor = { version = "0.7", features = [
    "defmt",
    "arch-cortex-m",
    "executor-thread",
    "task-arena-size-32768",
] }
embassy-futures = { version = "0.1", features = ["defmt"] }
embedded-hal = { version = "1.0.0" }
embedded-hal-async = { version = "1.0.0" }
embedded-io-async = "0.6.1"
heapless = "0.8.0"
pio-proc = "0.2.2"
embassy-sync = "0.6"
pio = "0.2.1"
fixed-macro = "1.2.0"
fixed = "1.28.0"
embassy-hal-internal = "0.2.0"
rp-pac = { version = "7.0.0", features = ["rp2040"] }
cortex-m-rt = "0.7"
portable-atomic = { version = "1.10", features = ["critical-section"] }
defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }
static_cell = "2"

# [features]
# avoid having to use --allow-multiple-definition linker flag
# on macOS with Apple Silicon at least
# default = ["rp-pico/disable-intrinsics"]

[build-dependencies]
xz2 = "0.1.7"
json = "0.12"
const-gen = "1.6"

# Split keyboard example
[[bin]]
name = "central"
path = "src/central.rs"

[[bin]]
name = "peripheral"
path = "src/peripheral.rs"

[profile.dev]
codegen-units = 1      # better optimizations
debug = true
opt-level = 1
overflow-checks = true
lto = false
panic = 'unwind'

[profile.release]
codegen-units = 1       # better optimizations
debug = true            # no overhead for bare-metal
opt-level = "z"         # optimize for binary size
overflow-checks = false
lto = "fat"
